WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307911
[Site Isolation] [iOS] <select> controls are broken when inside a cross-origin iframe on iOS
https://bugs.webkit.org/show_bug.cgi?id=307911
Summary
[Site Isolation] [iOS] <select> controls are broken when inside a cross-origi...
zak ridouh
Reported
2026-02-14 14:05:01 PST
The UIMenu appears, but selecting a value does not update the value of the input.
Attachments
Add attachment
proposed patch, testcase, etc.
zak ridouh
Comment 1
2026-02-14 14:10:34 PST
<
rdar://164540344
>
zak ridouh
Comment 2
2026-02-14 14:15:32 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58729
EWS
Comment 3
2026-03-12 17:40:12 PDT
Committed
309172@main
(281754ebdf08): <
https://commits.webkit.org/309172@main
> Reviewed commits have been landed. Closing PR #58729 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug