[Site Isolation] [iOS] <select> controls are broken when inside a cross-origin iframe on iOS https://bugs.webkit.org/show_bug.cgi?id=307911 rdar://164540344

Reviewed by Aditya Keerthi.

The UIMenu appears, but selecting a value does not update the value of the input.

Skip the test on macOS due to lack of test infrastructure to choose a select
option outside of iOS.

A different patch will focus on the macOS side of things.

* LayoutTests/TestExpectations:
* LayoutTests/http/tests/site-isolation/resources/select-element.html: Added.
* LayoutTests/http/tests/site-isolation/select-in-cross-origin-iframe-expected.txt: Added.
* LayoutTests/http/tests/site-isolation/select-in-cross-origin-iframe.html: Added.
* LayoutTests/platform/ios/TestExpectations:
* Source/WebKit/Shared/FocusedElementInformation.h:
(WebKit::FocusedElementInformation::frameID const):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView updateFocusedElementValue:]):
(-[WKContentView updateFocusedElementValueAsColor:]):
(-[WKContentView updateFocusedElementSelectedIndex:allowsMultipleSelection:]):
(-[WKContentView insertTextSuggestion:]):
* Source/WebKit/UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::WebPageProxy::setFocusedElementValue):
(WebKit::WebPageProxy::setFocusedElementSelectedIndex):
(WebKit::WebPageProxy::setSelectElementIsOpen):
* Source/WebKit/UIProcess/ios/forms/WKDateTimeInputControl.mm:
(-[WKDateTimePicker datePickerPopoverControllerDidReset:]):
* Source/WebKit/UIProcess/ios/forms/WKFormSelectPicker.mm:
(-[WKSelectPicker contextMenuInteraction:willDisplayMenuForConfiguration:animator:]):
(-[WKSelectPicker contextMenuInteraction:willEndForConfiguration:animator:]):
(-[WKSelectPicker resetContextMenuPresenter]):

Canonical link: https://commits.webkit.org/309172@main